# fastapi-example

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  env.py  pyproject.toml  server.py
.github/workflows/: superlinter.yml
fastapi_example/: __init__.py
tests/: test_fastapi_example.py
