[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = "FastAPI - Poetry Project Example"
authors = ["Tubagus Hendro Pramono <spyndutz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
